Fix developer homepage image stretching

--- a/src/themes/kross-hugo-portfolio-template/assets/css/style.css
+++ b/src/themes/kross-hugo-portfolio-template/assets/css/style.css
@@ -890,6 +890,8 @@ blockquote {
 .test-img {
   width: 100px;
   height: 100px;
+  // fix image strecthing
+  object-fit: cover;
 }
 
 .features-img {
